--- a/wiki/test.wiki
+++ b/wiki/test.wiki
@@ -5,9 +5,9 @@
 Add your content here.
 
 
-= Details =
-如何获取搜索引擎的url?
+= 常见问题 =
+*如何获取搜索引擎的url?
 进入搜索引擎，在搜索框中输入{s}然后点击搜索，然后将网页地址添加到url框内即可。
 
-如何获取获取浏览器编码？
+*如何获取获取浏览器编码？
 浏览到搜索结果页面，然后查看编码，当编码不是“unicode（utf-8）”时选中，GB2312框。
