--- a/wiki/update.wiki
+++ b/wiki/update.wiki
@@ -1,4 +1,8 @@
 =更新记录=
+* 1.6.0
+ # 拖拽选中的文本，使用喜爱的搜索引擎搜索
+ # 拖拽链接，在新窗口、新标签或页面弹出区域打开链接
+ # 拖拽图片，在图片查看器、新窗口、新标签中浏览图片。
 * 1.3.2
  # issue1,搜索页面底部等位置，快捷菜单超出浏览器窗口的问题，Reported by qkuncn
  # issue3,在查看源文件页面(view-source:http://)禁用quicksearch
