Edited wiki page through web user interface.

--- a/wiki/update.wiki
+++ b/wiki/update.wiki
@@ -1,6 +1,8 @@
 =更新记录=
-* 1.6.1
+* 1.6.3
  # 修正在页面请求期间无效的问题。
+ # 修正拖拽时鼠标光标不对的问题
+ # 将谷歌手气不错加入到内置搜索引擎中
 * 1.6.0
  # 拖拽选中的文本，使用喜爱的搜索引擎搜索
  # 拖拽链接，在新窗口、新标签或页面弹出区域打开链接
