--- a/wiki/update.wiki
+++ b/wiki/update.wiki
@@ -1,7 +1,7 @@
 =更新记录=
 * 1.6.6
   #issue9,可以拖拽搜索链接上的文字。
-  #修正了无法拖拽打开链接内包含其他标签的链接。
+  #修正无法拖拽打开链接内包含其他标签的链接。
 * 1.6.3
  # 修正在页面请求期间无效的问题。
  # 修正拖拽时鼠标光标不对的问题
