--- a/wiki/update.wiki
+++ b/wiki/update.wiki
@@ -1,7 +1,8 @@
 =更新记录=
-* 1.6.6
+* 1.6.7
   # issue9,可以拖拽搜索链接上的文字。
   # 无法拖拽打开链接内嵌套了其他标记的链接。
+  # 将右键菜单的字体修改为simsun，字号15px
 * 1.6.3
  # 修正在页面请求期间无效的问题。
  # 修正拖拽时鼠标光标不对的问题
