Edited wiki page through web user interface.

--- a/wiki/update.wiki
+++ b/wiki/update.wiki
@@ -1,4 +1,9 @@
 =更新记录=
+* 1.10.2
+  # 重新设计右键菜单的样式。
+  # 在图片查看器中，点击图片附近区域时关闭图片查看器。
+* 1.10.0
+  # 添加拖拽图片直接编辑功能。
 * 1.6.7
   # issue9,可以拖拽搜索链接上的文字。
   # 无法拖拽打开链接内嵌套了其他标记的链接。
