Edited wiki page through web user interface.

--- a/wiki/faq.wiki
+++ b/wiki/faq.wiki
@@ -3,3 +3,5 @@
  进入搜索引擎，在搜索框中输入{s}然后点击搜索，然后将网页地址添加到url框内即可。
  * 如何获取获取浏览器编码？
  浏览到搜索结果页面，然后查看编码，当编码不是“unicode（utf-8）”时选中，GB2312框。
+ * 为什么视频独立播放功能里没有窗口置顶功能？
+ “窗口置顶”功能需要调用到系统api，由于安全方面的因素，chrome的扩展是运行在浏览器“沙箱”之内的，因此目前Chrome China还不能提供这样的功能，期待chrome扩展系统提供相应的API。
